# runtime-failure-detection

./: .gitignore  .gitmodules  README.md  pyproject.toml  requirements-local.txt  requirements.txt
configs/: lerobot_convert.yaml
configs/convert_config/: hammer_cleanup_task.yaml  kitchen_task.yaml  nut_assembly_task.yaml  pick_place_task.yaml  three_piece_assembly.yaml
configs/inference/: config.yaml
configs/inference/task/: hammer_cleanup_D1.yaml  kitchen_task_D1.yaml  nut_assembly_task_D0.yaml  pick_place_task_D0.yaml  three_piece_assembly_task_D1.yaml
configs/task_config/: hammer_cleanup_D1_UR5e.json  kitchen_task_D1_UR5e.json  nut_assembly_task_D0_UR5e.json  pick_place_task_D0_UR5e.json  three_piece_assembly_task_D1_UR5e.json
configs/template/: template_lerobot_convert.yaml  template_mimicgen_config.json
scripts/: check_dataset.py  convert_hdf5_lerobot.py  fix_dataset_schema.py  list_tasks.py
src/inference/: interference_openpi_robosuite_ur5e.py
src/robosuite-data-collection/devices/: spacemouse-custom.py  spacemouse_custom.py
src/runtime-failure-detection/inference/: inference.py
src/runtime-failure-detection/inference/openpi_ur5e/: __init__.py  config.py  environment.py  logger.py  policy.py  rollout.py
