[project]
name = "runtime-failure-detection"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "dacite>=1.9.2",
    "h5py>=3.15.1",
    "lerobot>=0.4.2",
    "numpy>=2.4.1",
    "tyro>=1.0.4",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "ruff>=0.14.12",
    "pre-commit>=4.0.1",
]

[tool.ruff]
line-length = 120
target-version = "py311"
