[project]
name = "runtime-failure-detection"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "dacite>=1.9.2",
    "h5py>=3.15.1",
    "numpy>=2.3.5",
    "lerobot>=0.4.3",
    "omegaconf>=2.3.0",
    "tyro>=1.0.4",
    "hydra-core>=1.3.2",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "ruff>=0.14.12",
    "pre-commit>=4.0.1",
]
 
[tool.ruff]
line-length = 120
target-version = "py311"

[tool.pytest.ini_options]
markers = ["manual: should be run manually."]
testpaths = ["src", "scripts", "packages"]

[tool.ty.environment]
root = ["."]
python = "./.venv"
